--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "axios": "^1.5.0",
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.6.1",
-    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.2",
     "react-icons": "^4.11.0",
-    "react-router-dom": "^6.16.0"
+    "react-router-dom": "^6.16.0",
+    "react-select": "^5.7.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
